--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@studio-freight/lenis": "^1.0.22",
     "commander": "^11.1.0",
     "fs-extra": "^11.2.0",
+    "gsap": "^3.12.5",
     "html-react-parser": "^5.0.6",
     "next": "^14.2.5",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.45.4",
     "resend": "^2.0.0",
     "sass": "^1.54.9",
