--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.45.4",
+    "react-slick": "^0.30.2",
     "resend": "^2.0.0",
     "sass": "^1.54.9",
+    "slick-carousel": "^1.8.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
