--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.45.4",
+    "react-lottie": "^1.2.4",
     "react-slick": "^0.30.2",
     "resend": "^2.0.0",
     "sass": "^1.54.9",
